➕ Added Prism.js as a new syntax highlighter

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -8,7 +8,7 @@
       {% include components/navbar.html %}
       {% include components/menu.html %}
       {{ content }}
-      {% include scripts.html %}
+      {% include scripts.html syntax_highlighting=page.syntax_highlighting %}
       {% include footer.html %}
   </body>
 </html>
