--- a/docs/_includes/scripts.html
+++ b/docs/_includes/scripts.html
@@ -1,2 +1,7 @@
+{% assign syntax_highlighting = page.syntax_highlighting %}
 <script src="{{ site.url | append: site.baseurl | append: '/assets/js/zirconium.js' | append: '?v=' | append: timestamp }}"></script>
+{% if syntax_highlighting == nil or syntax_highlighting == 'rainbow' %}
 <script src="{{ site.url | append: site.baseurl | append: '/assets/js/rainbow.min.js' | append: '?v=' | append: timestamp }}"></script>
+{% else %}
+<script src="{{ site.url | append: site.baseurl | append: '/assets/js/prism.js' | append: '?v=' | append: timestamp }}"></script>
+{% endif %}
