--- a/sass/components/button.scss
+++ b/sass/components/button.scss
@@ -1,9 +1,9 @@
 .button {
     align-items     : center;
-    background-color: var(--background-color, var(--bg-1));
+    background-color: var(--button-background, var(--background-color, var(--bg-1)));
     border          : none;
     border-radius   : 0.25em;
-    color           : var(--color, var(--default-text));
+    color           : var(--button-color, var(--color, var(--default-text)));
     cursor          : pointer;
     display         : inline-flex;
     font-family     : var(--font-sans);
@@ -23,8 +23,8 @@
 }
 
 .button:hover {
-    color           : var(--hover-color, var(--default-text));
-    background-color: var(--hover-background-color, var(--silver-500));
+    color           : var(--button-color, var(--hover-color, var(--default-text)));
+    background-color: var(--button-background, var(--hover-background-color, var(--silver-500)));
     text-decoration : none;
 }
 
