✨ Added live example components

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -26,6 +26,7 @@
 @import "components/table.scss";
 @import "components/side-note.scss";
 @import "components/banner.scss";
+@import "components/live-example.scss";
 
 /* OVERRIDING UTILITIES */
 @import "utility.scss";
