✨ Added new space sizes

--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -6,6 +6,8 @@
     --space-s : 0.5em;
     --space-m : 0.75em;
     --space-l : 1em;
+    --space-xl : 2em;
+    --space-xxl : 4em;
 
     /* Z-index for components */
     --elevate-dropdown: 800;
