📝 Added figures documentation

--- a/sass/components/figure.scss
+++ b/sass/components/figure.scss
@@ -1,18 +1,16 @@
-.figure {
-    display: grid;
-}
-
-.figure img {
+.figure img,
+.figure video {
     border-radius: var(--border-radius);
 }
 
 .figure figcaption {
     font-family: var(--body-copy, var(--font-serif));
     font-size  : 0.9em;
+    margin     : auto;
+    margin-top : var(--space-m);
+    max-width  : 45ch;
     text-align : center;
     width      : 75%;
-    max-width  : 45ch;
-    margin     : auto;
 }
 
 .figure figcaption b {
@@ -22,6 +20,7 @@
 .quotation {
     padding: 1em 2em;
     border : 1px solid var(--bg-1);
+    background-color: var(--bg-0);
 }
 
 .quotation blockquote {
