--- a/sass/components/code-snippet.scss
+++ b/sass/components/code-snippet.scss
@@ -59,3 +59,7 @@
 .code-snippet .line-highlight::before {
     content: none !important;
 }
+
+.code-snippet:focus-visible {
+    @include focus-ring(var(--banana-500), true)
+}
