--- a/sass/colors.scss
+++ b/sass/colors.scss
@@ -186,6 +186,11 @@
     --bg-2: var(--silver-500);
     --bg-3: var(--silver-900);
 
+    --bg-0-raw: var(--silver-100-raw);
+    --bg-1-raw: var(--silver-300-raw);
+    --bg-2-raw: var(--silver-500-raw);
+    --bg-3-raw: var(--silver-900-raw);
+
     --contrast-text     : var(--black-700);
     --default-text      : var(--black-500);
     --subtle-text       : var(--black-300);
