--- a/sass/utilities/positioning.scss
+++ b/sass/utilities/positioning.scss
@@ -1,15 +1,15 @@
 .relative {
-    position: relative;
+    position: relative !important;
 }
 
 .absolute {
-    position: absolute;
+    position: absolute !important;
 }
 
 .fixed {
-    position: fixed;
+    position: fixed !important;
 }
 
 .static {
-    position: static;
+    position: static !important;
 }
