--- a/docs/_includes/components/banner.html
+++ b/docs/_includes/components/banner.html
@@ -1,6 +1,6 @@
 {% assign message = include.content %}
 {% assign type = include.type %}
-{% assign modifiers = include.modifiers %}
+{% assign modifiers = include.modifier %}
 
 {% if type == "success" %}
     {% assign icon = "check-circle" %}
