--- a/sass/components/button.scss
+++ b/sass/components/button.scss
@@ -13,7 +13,7 @@
     justify-content : center;
     padding         : var(--space-s) calc(var(--space-s) * 2);
     text-decoration : none;
-    transition      : color 300ms, background-color 300ms, opacity 300ms, box-shadow 300ms;
+    // transition      : color 300ms, background-color 300ms, opacity 300ms, box-shadow 300ms;
 
     --focus-color: var(--blueberry-500);
 }
@@ -25,6 +25,7 @@
 .button:hover {
     color           : var(--button-color, var(--hover-color, var(--default-text)));
     background-color: var(--button-background, var(--hover-background-color, var(--silver-500)));
+    border-color: var(--button-background, var(--hover-background-color, var(--silver-500)));
     text-decoration : none;
 }
 
