--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -128,7 +128,7 @@
 }
 
 .page-with-sidebar {
-    display              : grid;
+    display              : revert;
     grid-template-columns: 1fr;
     gap                  : 1em;
 }
@@ -143,6 +143,7 @@
 
 @media (min-width: 960px) {
     .page-with-sidebar {
+        display: grid;
         grid-template-columns: 1fr 3fr;
     }
 
