📝 Updated footer with MIT license notice

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,10 +1,21 @@
 <footer class="main-footer">
-  <div class="level-2-bg padding-l">
-    &copy; {{ "now" | date: "%Y" }} Antares Programming &middot; Powered by
-    <a href="https://jekyllrb.com/" target="_blank" rel="noopener">Jekyll</a>
-    and
-    <a href="https://github.io/" target="_blank" rel="noopener">Github Pages</a
-    >.
+  <div class="level-2-bg padding-l spaced flex">
+    <p class="margin-none">
+      &copy; {{ "now" | date: "%Y" }} Antares Programming &middot; Licensed
+      under
+      <a
+        href="https://github.com/antaresprogramming/zirconium/blob/main/LICENSE"
+        >MIT</a
+      >.
+    </p>
+    <p class="margin-none">
+      Powered by
+      <a href="https://jekyllrb.com/" target="_blank" rel="noopener">Jekyll</a>
+      and
+      <a href="https://github.io/" target="_blank" rel="noopener"
+        >Github Pages</a
+      >.
+    </p>
   </div>
   <div class="responsive-flex level-1-bg">
     <section class="padding-l">
@@ -48,7 +59,8 @@
       <nav aria-labelledby="footer-heading-2">
         <ul>
           <li>
-            <a class="padding-xs inline-block"
+            <a
+              class="padding-xs inline-block"
               href="https://facebook.com/antaresprogramming"
               target="_blank"
               rel="noopener noreferrer"
@@ -56,7 +68,8 @@
             >
           </li>
           <li>
-            <a class="padding-xs inline-block"
+            <a
+              class="padding-xs inline-block"
               href="https://twitter.com/antaresphdev"
               target="_blank"
               rel="noopener noreferrer"
@@ -64,7 +77,8 @@
             >
           </li>
           <li>
-            <a class="padding-xs inline-block"
+            <a
+              class="padding-xs inline-block"
               href="https://instagram.com/antaresprogramming"
               target="_blank"
               rel="noopener noreferrer"
@@ -72,7 +86,8 @@
             >
           </li>
           <li>
-            <a class="padding-xs inline-block"
+            <a
+              class="padding-xs inline-block"
               href="https://youtube.com/c/antaresprogramming"
               target="_blank"
               rel="noopener noreferrer"
