🐛 Changed spacing units to rem

--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -2,12 +2,12 @@
     --border-radius: 0.25em;
 
     /* Used for paddings and margins */
-    --space-xs: 0.25em;
-    --space-s : 0.5em;
-    --space-m : 0.75em;
-    --space-l : 1em;
-    --space-xl : 2em;
-    --space-xxl : 4em;
+    --space-xs: 0.25rem;
+    --space-s : 0.5rem;
+    --space-m : 0.75rem;
+    --space-l : 1rem;
+    --space-xl : 2rem;
+    --space-xxl : 4rem;
 
     /* Z-index for components */
     --elevate-dropdown: 800;
