--- a/docs/_includes/components/navbar.html
+++ b/docs/_includes/components/navbar.html
@@ -392,7 +392,7 @@
       </a>
     </li>
   </ul>
-  <button class="nav-item hide-on-larger-than-mobile end-aligned" data-toggle aria-expanded="false">
+  <button class="nav-item hide-on-larger-than-mobile end-aligned" data-toggle="mobile-nav-dropdown" aria-expanded="false">
     <svg
       class="nav-item__main"
       xmlns="http://www.w3.org/2000/svg"
@@ -412,7 +412,7 @@
     </svg>
     <span class="visually-hidden"> Toggle Menu </span>
   </button>
-  <ul class="fixed-to-right hide-on-larger-than-mobile level-1-border bordered uppercase dropdown">
+  <ul class="fixed-to-right hide-on-larger-than-mobile level-1-border bordered uppercase dropdown" id="mobile-nav-dropdown">
     <li>
       <a href="https://antaresprogramming.github.io/articles/" class="nav-item">
         <svg
