--- a/sass/components/button.scss
+++ b/sass/components/button.scss
@@ -37,6 +37,7 @@
     opacity: 0.5;
 }
 
+.button-group.no-bg .button,
 .button.no-bg {
     --color                 : var(--default-text, inherit);
     --background-color      : transparent;
@@ -44,6 +45,7 @@
     --hover-background-color: var(--silver-300);
 }
 
+.button-group.primary .button,
 .button.primary {
     --background-color      : var(--bubblegum-500);
     --color                 : var(--silver-100);
@@ -52,6 +54,7 @@
     --shadow-color          : var(--bubblegum-500-transparent);
 }
 
+.button-group.primary.no-bg .button,
 .button.primary.no-bg {
     --background-color      : transparent;
     --color                 : var(--bubblegum-700);
@@ -59,6 +62,7 @@
     --hover-color           : var(--bubblegum-900);
 }
 
+.button-group.accent .button,
 .button.accent {
     --background-color      : var(--blueberry-500);
     --color                 : var(--silver-100);
@@ -68,6 +72,7 @@
     --shadow-color          : var(--blueberry-500-transparent);
 }
 
+.button-group.accent.no-bg .button,
 .button.accent.no-bg {
     --background-color      : transparent;
     --color                 : var(--blueberry-700);
@@ -88,12 +93,14 @@
         --hover-background-color: var(--bg-2);
     }
 
+    .button-group.no-bg .button,
     .button.no-bg {
         --background-color      : transparent;
         --color                 : var(--default-text, inherit);
         --hover-background-color: var(--bg-1);
     }
 
+    .button-group.primary .button,
     .button.primary {
         --background-color      : var(--bubblegum-700);
         --color                 : var(--bubblegum-100);
@@ -101,11 +108,13 @@
         --hover-color           : var(--bubblegum-100);
     }
 
+    .button-group.primary.no-bg .button,
     .button.primary.no-bg {
         --background-color: transparent;
         --color           : var(--bubblegum-300);
     }
 
+    .button-group.accent .button,
     .button.accent {
         --background-color      : var(--blueberry-700);
         --color                 : var(--silver-100);
@@ -113,6 +122,7 @@
         --hover-color           : var(--blueberry-100);
     }
 
+    .button-group.accent.no-bg .button,
     .button.accent.no-bg {
         --background-color: transparent;
         --color           : var(--blueberry-300);
