✨ Added scroll margin to link targets

--- a/sass/reset.scss
+++ b/sass/reset.scss
@@ -147,3 +147,7 @@ nav li:before {
 *:focus-visible {
     @include focus-ring(var(--banana-500), false)
 }
+
+:target {
+    scroll-margin-top: 15vh
+}
